--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "test:ci": "mocha --ui mocha-given -R spec test",
     "test:dev": "testem .",
     "test": "npm run test:ci",
-    "prepublish": "npm test && npm prune"
+    "prepublish": "npm test && npm prune",
+    "preversion:patch": "npm run test",
+    "version:patch": "xyz -i patch",
+    "preversion:minor": "npm run test",
+    "version:minor": "xyz -i minor",
+    "preversion:major": "npm run test",
+    "version:major": "xyz -i major"
   },
   "publishConfig": {
     "registry": "http://registry.npmjs.org"
@@ -43,7 +49,8 @@
     "mocha-given": "^0.1.3",
     "snazzy": "^2.0.1",
     "standard": "^5.3.1",
-    "testem": "^0.9.8"
+    "testem": "^0.9.8",
+    "xyz": "^0.5.0"
   },
   "peerDependencies": {}
 }
