--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "user",
     "middleware"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "activedirectory": "^0.7.0",
+    "merge": "^1.2.0"
+  },
   "devDependencies": {
-    "expect": "^1.12.2",
+    "chai": "^3.4.0",
     "mocha": "^1.20.1",
     "mocha-given": "^0.1.3",
     "snazzy": "^2.0.1",
