--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "chai": "^3.4.0",
     "mocha": "^1.20.1",
     "mocha-given": "^0.1.3",
+    "proxyquire": "^1.7.3",
     "snazzy": "^2.0.1",
     "standard": "^5.3.1",
     "testem": "^0.9.8",
