--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "ldapuserobject",
+  "name": "activedirectoryuserobject",
   "description": "Middleware to create a user object on req via data fetched from ldap",
   "version": "0.0.0",
   "license": "MIT",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mediasuitenz/ldapuserobject.git"
+    "url": "https://github.com/mediasuitenz/activedirectoryuserobject.git"
   },
   "bugs": {
-    "url": "https://github.com/mediasuitenz/ldapuserobject/issues"
+    "url": "https://github.com/mediasuitenz/activedirectoryuserobject/issues"
   },
-  "homepage": "https://github.com/mediasuitenz/ldapuserobject",
+  "homepage": "https://github.com/mediasuitenz/activedirectoryuserobject",
   "author": {
     "name": "Richard Walker",
     "email": "digitalsadhu@gmail.com",
