--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "activedirectoryuserobject",
-  "description": "Middleware to create a user object on req via data fetched from ldap",
+  "description": "Middleware to create a user object on req via data fetched from activedirectory",
   "version": "0.0.0",
   "license": "MIT",
   "main": "index.js",
